# PETAce-Verse

./: .clang-format  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md
bench/: CMakeLists.txt  README.md  bench.cpp  verse_bench.cpp  verse_bench.h
cmake/: EnableCXX17.cmake  EnableDebugFlags.cmake  PETAce-Network.cmake  PETAce-Solo.cmake  PETAce-VerseConfig.cmake.in  VerseCustomMacros.cmake
example/: CMakeLists.txt  example.cpp  example.h  iknp_ot_example.cpp  kkrt_ot_example.cpp  np_ot_example.cpp
src/verse/: CMakeLists.txt  verse_factory.h
src/verse/base-ot/: CMakeLists.txt  base_ot_receiver.h  base_ot_sender.h
src/verse/base-ot/naor-pinkas-ot/: CMakeLists.txt  naor_pinkas_ot.cpp  naor_pinkas_ot.h
src/verse/n-choose-one/: CMakeLists.txt  nco_ot_ext_receiver.h  nco_ot_ext_sender.h
src/verse/n-choose-one/kkrt/: CMakeLists.txt  kkrt_nco_ot_ext.cpp  kkrt_nco_ot_ext.h
src/verse/two-choose-one/: CMakeLists.txt  ot_ext_receiver.h  ot_ext_sender.h
src/verse/two-choose-one/iknp/: CMakeLists.txt  iknp_ot_ext.cpp  iknp_ot_ext.h
src/verse/util/: CMakeLists.txt  common.h  config.h.in  defines.h
test/: CMakeLists.txt  iknp_ot_test.cpp  kkrt_ot_test.cpp  np_ot_test.cpp
